package edu.hitsz.observerPattern;

/**炸弹道具实现， 观察者模式中的抽象观察者*/
public interface Subscriber {
    public void update();
}
